k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  randomapp
  labels:
    name:  randomapp
spec:
  replicas: 3
  selector:
    matchLabels:
      name: randomapp
  template:
    metadata:
      labels:
        name: randomapp
    spec:
      containers:
      - image: quay.io/dhruvasagar/randomapp:latest
        name: randomapp
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
