k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: randomapp
  labels:
    app: randomapp
spec:
  selector:
    name: randomapp
  ports:
  - name: randomapp
    port: 8080
    targetPort: 8080
